# OOP_mod_2

./: CMakeLists.txt  Theory.MD  catch.hpp  main.cpp  testFile.txt  tests.cpp
.github/workflows/: build_cmake.yml
counter/: WordCounter.cpp  WordCounter.h
reader/: FileReader.cpp  FileReader.h  Reader.h
